--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </div>
 
         <div class="cenco">
-            <a href="Produtos.html">PRODUTOS</a>
+            <a href="produtos.html">PRODUTOS</a>
         </div>
         
         
