--- a/produtos.html
+++ b/produtos.html
@@ -48,14 +48,14 @@
 
         <li>
            <h2> MASSAGEM RELAXANTES</h2>
-           <img src="c:\Users\vitor\Pictures\Saved Pictures\rx7.png">
+           <img src="rx7.png">
            <p>Massagem relaxante no rosto com óleos especias</p>
            <p class="produto-preco">R$20,00</p>
         </li>
 
         <li>
             <h2> TRATAMENTO CAPILAR </h2>
-            <img src="c:\Users\vitor\Pictures\Saved Pictures\supra.png">
+            <img src="supra.png">
             <p>Tratamento capilar feito pelos nossos especialistas</p>
             <p class="produto-preco">R$35,00</p>
         </li>
@@ -63,14 +63,14 @@
         <li>
             
         <h2>SOBRANCELHA</h2>
-            <img src="c:\Users\vitor\Pictures\Saved Pictures\skyline.png">
+            <img src="skyline.png">
             <p>Design de sobrancelha feito com todo cuidado que você merece</p>
             <p class="produto-preco">R$30,00</p>
         </li>
 
         <li>
             <h2>DEPILAÇÃO</h2>
-                <img src="c:\Users\vitor\Pictures\Saved Pictures\chaser.png">
+                <img src="chaser.png">
                 <p>Depilação do nariz e orelha feita com aparelhos profissionais</p>
                 <p class="produto-preco">R$20,00</p>
         </li>
