--- a/produtos.html
+++ b/produtos.html
@@ -25,7 +25,7 @@
 
             <div onclick="exibirVideo();" class="vodase">
             <h2 > CORTES </h2>
-            <img  src="c:\Users\vitor\Pictures\Saved Pictures\silvia.png">
+            <img  src="silvia.png">
             <p >Cortes de cabelo inspirados em carros JDM</p>
             <p  class="produto-preco">R$25,00</p>
 
